<resources>
    <string name="app_name">Ежедневник</string>

    <!--    main-->
    <string name="app_bar_main_search_hint">Поиск</string>
    <string name="app_bar_main_calendar">Календарь</string>
    <string name="app_bar_main_add">Добавить</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_diary">Ежедневник</string>
    <string name="menu_notes">Заметки</string>
    <string name="menu_trash">Корзина</string>
    <string name="nav_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="empty_list">Заметки отсутствуют</string>

    <!--    note-edit-->
    <string name="app_bar_note_edit_confirm">Сохранить</string>
    <string name="app_bar_note_edit_calendar">Календарь</string>
    <string name="app_bar_note_title_hint">Название</string>
    <string name="app_bar_note_text_hint">Текст</string>
    <string name="app_bar_note_list_item">Текст</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="time_pick_clear">Очистить</string>

    <string name="note_action_add">Добавлено</string>
    <string name="note_action_edit">Последнее обновление</string>
    <string name="note_action_delete">Удалено</string>

    <!--    preferences-->
    <string name="settings_activity_title">Настройки</string>
    <string name="display_header">Отображение</string>
    <string name="sort_title">Сортровка</string>
    <string name="sort_direction_title">Порядок отображения</string>
    <string name="interface_header">Интерфейс</string>
    <string name="dark_theme_title">Темная тема</string>
    <string name="font_size_title">Размер шрифта</string>
    <string name="collapse_notes_title">Сворачивать длянные заметки</string>
    <string name="finished_section_title">Перемещать завершенные вниз</string>
    <string name="language_title">Язык</string>
    <string name="other_header">Разное</string>
    <string name="auto_notification_title">Автоматически добавлять уведомление</string>

    <!--    about-->
    <string name="about_activity_title">О приложении</string>
    <string name="copyright">Ⓒ 2017 Mamindeveloper</string>
    <string name="developer_email">mamindeveloper@gmail.com</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="used_resources">Использованные ресурсы</string>
    <string name="used_resources_credits"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
        \n<div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
    </string>

    <!--    login, register-->
    <string name="login_activity_title">Вход</string>
    <string name="register_activity_title">Регистрация</string>
    <string name="error_invalid_email">Email адрес не валидный</string>
    <string name="error_invalid_password">Пароль доглжен содердать не менее 4 символов</string>
    <string name="error_invalid_password_repeat">Пароли не совпадают</string>
    <string name="error_invalid_name">Имя обязательно</string>
    <string name="error_incorrect_password">Не правильный пароль</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="name_hint">Имя</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="reset_password_notification">Новый пароль отправлен на адрес</string>

<!--    profile-->
    <string name="profile_activity_title">Профиль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="auto_backup">Автоматическое резервное копирование</string>
    <string name="app_in_password">Запрашивать пароль при входе в приложение</string>
    <string name="available_backups">Доступные резервные копии</string>
    <string name="backup_auto_created">Автоматически создан</string>
</resources>