<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/sort_entries"
            app:entryValues="@array/sort_values"
            app:key="sort"
            app:title="@string/sort_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/sort_direction_entries"
            app:entryValues="@array/sort_direction_values"
            app:key="sortDirection"
            app:title="@string/sort_direction_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/interface_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="darkTheme"
            app:title="@string/dark_theme_title" />

        <ListPreference
            app:defaultValue="14"
            app:entries="@array/font_size_values"
            app:entryValues="@array/font_size_values"
            app:key="fontSize"
            app:title="@string/font_size_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="collapseNotes"
            app:title="@string/collapse_notes_title" />

        <SwitchPreferenceCompat
            app:key="finishedSection"
            app:title="@string/finished_section_title" />

        <ListPreference
            app:defaultValue="ru"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="autoNotification"
            app:title="@string/auto_notification_title" />
    </PreferenceCategory>

</PreferenceScreen>
